_assets_/css/layout.css
/* ... */
@media only screen and (max-width:1280px) {

	/*--------------- #quick-links ---------------*/
	#freeform #quick-links h2 {font-size: 26px;}
	#freeform a.quick-link {padding: 25px}
	
}

@media only screen and (max-width:1040px) {

	/*--------------- #nav ---------------*/
	#logo {width: 240px;}

	.social-links {margin-right: 15px;}
	.social-links a {margin-left: 10px;}

	/*--------------- #quick-links ---------------*/
	a.quick-link {width: 50%;}
}

@media only screen and (max-width:991px) {

	/* rz form tables - without page scope this targets editforms and makes
	 * editing confusing
	 */
	#freeform #formwizziwmorf tr,#freeform #formwizziwmorf tr td{display:block!important}
	#freeform #formwizziwmorf tr table tr{display:table-row!important}
	#freeform #formwizziwmorf tr table td{display:table-cell!important}
	.floating-share-btn{top: unset; bottom: 0; padding: 10.5px; font-size: 11px;}

	header .container,
	#freeform header .container {padding: 15px;}
	.toggle,
	.toggle2,
	#nav-toggle{display:inline-block;cursor:pointer}
	.down-arrow{display:none} /* if not hidden above */
	#nav{display:none}
	#nav li{float:none;display:block}
	#nav li a,
	#nav li span{padding:15px;line-height:1;border-bottom:1px solid rgba(0,0,0,.2);background:none;font-size:14px}
	#nav ul{position:static;top:0;padding:0;background:rgba(0,0,0,.2)}
	#nav li:hover > ul{display:none}
	#nav ul a,
	#nav ul span{width:100%}
	#nav ul ul{left:0}
	#nav .toggle,
	#nav .toggle2{position:absolute;right:0;top:0;background:rgba(0,0,0,.2);height:45px;width:45px;line-height:45px;text-align:center}
	#nav li li:hover > a{background:none;color:#fff}

	#search {display: none; margin-top: 15px; width: 100%; z-index: 100;}
	#toggles{float:right}
	#search-toggle,
	#nav-toggle{line-height:45px;width:45px;text-align:center;border:1px solid rgba(255,255,255,.15);cursor:pointer;font-size:20px;color:#fff;border-radius:4px;margin-left:5px; margin-top: 5px;}

	#side-content {margin-left: -15px; padding: 15px}
	#flyout{display:none}
	#flyout li{margin: 0;}
	#flyout li a,
	#flyout li span{position: relative;display:inline-block;width:100%;padding:15px;line-height:1;border-bottom:1px solid rgba(0,0,0,.2);background:none;font-size:14px}
	#flyout ul{display: none; position:static;left:0;padding:0;background:rgba(0,0,0,.2)}
	#flyout ul a,
	#flyout ul span{margin-bottom: 0;}
	#flyout li:hover > ul{display:none}
	#flyout-toggle {font-size: 18px;color: #ddde90;}
	#flyout .toggle,
	#flyout .toggle2 {position: absolute; top: 0; background:rgba(0,0,0,.2);right: 0;height:45px;width:45px;line-height:45px;text-align:center}

	/*--------------- #content ---------------*/
	.news-link {padding: 30px 20px 30px 30px;}
	.news-link a {margin-top: 15px;}

	#notification {padding-bottom: 0;}
	#signup {margin: 30px 15px;}
	#signup input {padding: 0 15px;}

	/*--------------- #calendar ---------------*/
	#calendar {padding: 50px 0;}

	/*--------------- #connect ---------------*/
	#connect h2 {float: none;margin: 0;}
	#connect .overlay {right: 0; width: 100%}
	#filter {float: none;margin: 15px 0;}
	.social-img {height: 250px;}
	.social-feed-element {margin-bottom: 30px;}
	.text-wrapper {padding: 15px;}
	.social-feed-text {font-size: 16px;}
	#twitter-feed li {width: 100%; margin: 30px 0;}
	.tweet_text {font-size: 16px;}

	/*--------------- #footer-links ---------------*/
	#footer-links {padding: 30px 0;}
	#footer-nav i {display: none;}
	#footer-nav li {margin-right: 8px;}
	#footer-nav li a {font-size: 14px;}
	#footer-nav li:not(:last-of-type):after {right: -8px;}
	#contact-info span {font-size: 12px; margin-right: 15px;}
	#contact-info span:not(:last-of-type):after {right: -10px;}

	#right-links>a {font-size: 14px;}
	#right-links .social-links {margin-right: 10px;}

	/*--------------- footer ---------------*/
	footer {font-size: 12px;}
	footer a {font-size: 14px;}

	/*--------------- #slider ---------------*/
	#freeform #slider {height: 450px;}

	/*--------------- #entry ---------------*/
	#entry {padding: 50px 0 0 0;}
	#post ul li a {font-size: 18px;}

}
/* ... */

